# ajenda-ai

./: .dockerignore  .env  .env.backup.2026-03-29_02-55-42  .env.example  .env.v3.example  .gitignore  .gitleaks.toml  .omnipath_policy.yml  .pre-commit-config.yaml  .secrets.baseline  BUILD_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.frontend  Dockerfile.production  ENV_SETUP_README.md  IMPLEMENTATION_DAY1-2.md  OMNIPATH_QUICKSTART.md  PERFORMANCE_BASELINE.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PRIDE_EVOLUTION.md  PROJECT_SPEC.md  QUICKSTART.md  QUICKSTART_V5.md  README.md  README.v3.md  SECRETS.md  SECURITY_AUDIT.md  SESSION_LOG.md  STRATEGIC_ROADMAP.md  SYSCTL.md  V5_README.md  WEEK_1_SUMMARY.md  alembic.ini  deploy.sh  docker-compose.production.yml  docker-compose.staging.yml  (+14 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
alembic/: env.py
backend/: __init__.py  main.py  version.py
cli/: README.md  omnipath.py  omnipath_aliases.zsh  requirements.txt
docs/: ARCHITECTURE.md  COMPLIANCE_ARCHITECTURE.md  LLM_PROVIDER_GUIDE.md  MONTH_3_WEEKS_2-4_DESIGN.md  MONTH_3_WEEK_1_DESIGN.md  MONTH_4_PRODUCTION_HARDENING_DESIGN.md  MULTI_MODEL_LLM_GUIDE.md  PROJECT_STATE_REPORT.md  README.md  ROADMAP_V4.md  SAAS_ARCHITECTURE.md  SECRETS_MANAGEMENT_GUIDE.md  TESTING_GUIDE.md  UI_DASHBOARD_SPEC.md  WEEK_2_DESIGN.md  WEEK_4_DESIGN.md  few_shot_architecture.md  generate_progress_viz.py  mission_suite_v1.md  operation_bedrock.md  operation_intelligence.md  phase6_proof_missions.md  proof_mission_results.md  test_coverage_gaps.md
examples/: 01_mission_patterns.py  02_tool_usage.py  03_revenue_pipeline.py  04_first_real_mission.py  README.md
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo
grafana/: README.md
infra/: README.md
k8s/: backup-cronjob.yaml  deployment.yaml  ingress.yaml  network-policy.yaml  secrets.yaml.template
monitoring/: ALERT_RUNBOOKS.md  prometheus.yml
scripts/: backup_db.sh  bump_version.py  reproduce_failures.py  rerun_m1.py  run_ci_parity.sh  run_live_missions.py  run_proof_missions.py
tests/: PHASE1_README.md  conftest.py  run_phase1_tests.sh  run_staging_tests.py  test_alert_manager.py  test_api_gateway.py  test_approval_workflows.py  test_asset_registry.py  test_audit_monitor.py  test_cache_manager.py  test_compliance_checker.py  test_compliance_reporting.py  test_contextual_tagging.py  test_event_streaming.py  test_few_shot_library.py  test_governance_economy.py  test_governance_integration.py  test_governance_integration_fixed.py  test_governance_repositories.py  test_impact_assessment.py  test_integration_e2e.py  test_inventory_rules.py  test_lineage_tracker.py  test_month5_implementations.py  test_phase2_scheduled_agent.py  test_phase3_self_marketing_agent.py  test_phase4_coordinating_agent.py  test_phase5_revenue_agent.py  test_policy_engine.py  test_policy_evaluator.py  test_risk_metrics.py  (+6 more)
(+536 files in other folders)
