[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ajenda-ai"
version = "1.1.0"
description = "Ajenda AI — Production-grade governed-runtime backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "python-json-logger>=2.0,<4.0",
  # Auth — cryptographic hashing and JWT verification
  "passlib[argon2]>=1.7.4,<2.0",
  "python-jose[cryptography]>=3.3.0,<4.0",
  "httpx>=0.27,<1.0",
  # Queue
  "redis>=5.0,<8.0",
  # Observability
  "prometheus-client>=0.20,<1.0",
  "opentelemetry-sdk>=1.24,<2.0",
  "opentelemetry-instrumentation-fastapi>=0.45b0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "pytest-cov>=5.0,<8.0",
  "freezegun>=1.4,<2.0",
  "httpx>=0.27,<1.0",
  "anyio>=4.4,<5.0",
  "ruff>=0.6,<1.0",
  "mypy>=1.11,<2.0",
  # Integration test infrastructure — real Postgres and Redis containers
  "testcontainers[postgres,redis]>=4.8,<5.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
addopts = "-q -ra"
testpaths = ["tests"]
markers = [
  "integration: marks tests as integration tests requiring Docker (deselect with -m 'not integration')",
  "unit: marks tests as unit tests (no external dependencies required)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["N818"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
packages = ["backend"]
